syntax = "proto2";
package cmd0x3f7;


message targer {
  required uint32 wCsCmdNo = 1 [default=1];
  required Info GroupSub = 2;
}
message Info {
  required uint32 SubCmd =1 [default=1];
  required uint32 GroupType = 2;
  required uint64 GroupCode = 3;
}
//------------------------------------
message msg {
  required uint32 RequestId = 1 [default=1];
  required uint32 unknow1 = 2 [default=0];
  required uint64 GroupCode = 3;
  required Cs cs = 4;
}
message Cs {
  required uint32 MsgSeq = 1;
  required uint32 MsgRandom = 2;
}




